manifests/service.yaml
apiVersion: v1              # Core API version where service is located
kind: Service
metadata:
  name: system-monitor-service  # Name of the Service
spec:
  type: NodePort               # Exposes the Service on a static port on each node
  selector:                    # Which Pods this Service routes traffic to
    app: system-monitor          # Must match the Pod label from the Deployment
  ports:
    - port: 80                   # Port the Service itself listens on.
      targetPort: 8080            # Port on the container that traffic gets forwarded to
      nodePort: 30080              # External port exposed on the node
